# hn-summarizer

./: .gitignore  CLAUDE.md  README.md  daily_summary.txt  pyproject.toml
hn_summarizer/: __init__.py  cli.py  config.py  fetchers.py  logging_config.py  models.py  summarizer.py
hn_summarizer/summarizers/: __init__.py  base.py  basic.py  llmapi.py  ollama.py
sample/: daily_summary.txt  summary.md
tests/: test_cli.py  test_fetchers.py  test_modular_summarizer.py  test_summarizer.py  test_summarizers.py
