[tool.poetry]
name = "hn-summarizer"
version = "0.1.0"
description = "A Python tool to fetch and summarize top Hacker News articles"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "hn_summarizer"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.0"
lxml = "^4.9.0"
click = "^8.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.5.0"

[tool.poetry.scripts]
hn-summarizer = "hn_summarizer.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
